# libaprstrack

./: .gitignore  README.md  aprstrack.hpp  libaprstrack.hpp
assets/: generate_route.py  mic_e_packets.txt  parse_packets.pl  position_packets.txt  route1.geojson.json  route1.points.txt  route1.shape.txt  route1.txt  route2.geojson.json  route2.points.txt  route2.shape.txt  route2.txt  route3.geojson.json  route3.points.txt  route3.txt
scripts/: generate_route.py  parse_packet.pl  parse_packets.pl
tests/: CMakeLists.txt  CMakePresets.json  basic_periodic.cpp  basic_periodic_test.cpp  compile_in_tu.cpp  generate_test_json.cpp  tests.cpp  tests.hpp  use_in_other_tu.cpp  use_in_tu.cpp  use_in_tu.h  with_etl_string.cpp
